# WaterMarkBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  app.json  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yml
dpwatermarkbot/: __init__.py  __main__.py  bot_class.py  vars.py
dpwatermarkbot/db/: __init__.py  mongo.py
dpwatermarkbot/plugins/: add_watermark.py  broadcast.py  callback_queries.py  cancel.py  myaccount.py  save_watermark.py  settings.py  start.py  status.py
dpwatermarkbot/utils/: build_kb.py  caching.py  clean.py  constants.py  display_progress.py  ffmpeg.py  joinCheck.py  paste.py  upload_utils.py  vid_utils.py
