[tool.poetry]
name = "watermarkbot"
version = "1.5.3"
description = ""
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^2.0.106"
hachoir = "^3.2.0"
aiofiles = "^23.1.0"
aiohttp = "^3.8.4"
dnspython = "^2.3.0"
humanfriendly = "^10.0"
psutil = "^5.9.5"
TgCrypto = "^1.2.5"
cachetools = "^5.3.0"
pymongo = "^4.3.3"
Pillow = "^9.5.0"
prettyconf = "^2.2.1"
pickledb-ujson = "^1.0.16"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
pyclean = "^2.7.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
