[tool.poetry]
name = "watermarkbot"
version = "1.5.3"
description = ""
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^2.0.106"
hachoir = "^3.2.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
dnspython = "^2.4.2"
humanfriendly = "^10.0"
psutil = "^5.9.6"
TgCrypto = "^1.2.5"
cachetools = "^5.3.2"
pymongo = "^4.6.0"
Pillow = "^9.5.0"
prettyconf = "^2.2.1"
pickledb-ujson = "^1.0.16"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pyclean = "^2.7.6"
pylint = "^2.17.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
