[tool.poetry]
name = "watermarkbot"
version = "1.5.3"
description = ""
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^2.0.106"
hachoir = "^3.3.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.5"
dnspython = "^2.6.1"
humanfriendly = "^10.0"
psutil = "^5.9.8"
TgCrypto = "^1.2.5"
cachetools = "^5.3.3"
pymongo = "^4.7.3"
Pillow = "^9.5.0"
prettyconf = "^2.2.1"
pickledb-ujson = "^1.0.16"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.7.1"
pyclean = "^2.7.6"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
